public/css/index.css
body {
  font-family: 'Questrial', sans-serif;
  background-color: #F5F5F5;
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}

.navbar {
  background-color: transparent;
  margin-bottom:0px;
  border-radius: 0px;
  z-index: 1;
  border: 0;
}

a.navbar-brand:hover{
  color: #fff;
  text-decoration: none;
}

.welcomeHeader {
  text-align: center;
}

.container {
  width: 85%;
}

.btn-signup {
  color: #000;
  border-radius: 3px;
  border: 2px solid #fff;
  background-color: #fff;
  font-size: 18px;
  display: inline-block;
  margin-top: 10px;
}

.btn-signup:hover {
  color:#fff;
  background-color: #337AB7;
  border: 2px solid #337AB7;
  text-decoration: none;
}

.btn-login {
  color: #fff;
  font-size: 18px;
  border: 2px solid #fff;
  border-radius: 3px;
  background-color: transparent;
  margin-top: 10px;
}

.btn-login:hover {
  color:#fff;
  background-color: #549A17;
  border: 2px solid #549A17;
  text-decoration: none;
}

.signup-link {
  padding-left: 10px;
}

.navbar-brand {
  color: #fff;
  font-size: 30px;
}

.angular-google-map-container {
 width: 100%;
 height: 73vh;
 position: fixed;
 bottom: 0;
 right: 0;
}

.dropdown:hover .dropdown-menu {
    display: block;
    margin-top: 0; /* remove the gap so it doesn't close */
 }

#username-navbar {
  text-decoration: none;
  color: white;
}

.nav>li>a:focus, .nav>li>a:hover {
  background-color: transparent;
}

.inline {
    display: inline;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  /*height: 10px;*/
  background-color: #f5f5f5;
}

